<resources>
    <string name="app_name">MM Android</string>
    <string name="terminfo_title">Terminal Info</string>
    <string name="terminfo_separate_colon">": "</string>
    <string name="terminfo_unit_pixel">"%dpixel"</string>
    <string name="terminfo_unit_hertz">"%fHz"</string>
    <string name="terminfo_unknown">unknown</string>
    <string name="terminfo_ldpi">ldpi</string>
    <string name="terminfo_mdpi">mdpi</string>
    <string name="terminfo_hdpi">hdpi</string>
    <string name="terminfo_xdpi">xdpi</string>
    <string name="terminfo_small">small</string>
    <string name="terminfo_normal">normal</string>
    <string name="terminfo_large">large</string>
    <string name="terminfo_xlarge">xlarge</string>
    <string name="terminfo_header_display">Display</string>
    <string name="terminfo_colmun_display_width">Width</string>
    <string name="terminfo_colmun_display_height">Height</string>
    <string name="terminfo_colmun_display_statusbar_height">Status Bar Height</string>
    <string name="terminfo_colmun_display_density_dpi">Density DPI</string>
    <string name="terminfo_colmun_display_dpi">DPI</string>
    <string name="terminfo_colmun_display_size">Resources Size</string>
    <string name="terminfo_colmun_display_refresh_rate">Refresh Rate</string>
    <string name="terminfo_header_build">Build</string>
    <string name="terminfo_header_proc_version">Version</string>
    <string name="terminfo_header_proc_cpuinfo">CPU Info</string>
    <string name="terminfo_header_proc_meminfo">Memory Info</string>
    <string name="appinfo_separate_colon">": "</string>
    <string name="appinfo_separate_space">" "</string>
    <string name="appinfo_label_app_name">APP Name</string>
    <string name="appinfo_label_search_market_url">Search Market URL</string>
    <string name="appinfo_button_ok">OK</string>
    <string name="appinfo_button_cancel">Cancel</string>
    <string name="appinfo_title_scanning">Scanning...</string>
    <string name="appinfo_title_nothing">Nothing</string>
    <string name="appinfo_title_count">"%d items"</string>
    <string name="appinfo_title_sort">"Order: %s"</string>
    <string name="appinfo_detail_package_name">Package Name</string>
    <string name="appinfo_detail_source_dir">APK Path</string>
    <string name="appinfo_detail_source_size">APK Size</string>
    <string name="appinfo_detail_data_dir">Data Dir</string>
    <string name="appinfo_detail_data_size">Data Size</string>
    <string name="appinfo_detail_description">Description</string>
    <string name="appinfo_output_format">Format</string>
    <string name="appinfo_output_html">HTML</string>
    <string name="appinfo_output_text">TEXT</string>
    <string name="appinfo_output_label_display">display after output</string>
    <string name="appinfo_output_items">Output Items</string>
    <string name="appinfo_output_market_search_url">Market Search URL</string>
    <string name="appinfo_output_punc">"* "</string>
    <string name="appinfo_output_indent">"    "</string>
    <string name="appinfo_output_message_unavailable">SD card unavailable</string>
    <string name="appinfo_output_app_notfound">App not found</string>
    <string name="appinfo_menu_detail_uses_permission">Uses Permission</string>
    <string name="appinfo_menu_detail_search_market">Search Market</string>
    <string name="appinfo_menu_detail_share">Share</string>
    <string name="appinfo_menu_detail_launch">Launch</string>
    <string name="appinfo_menu_detail_uninstall">Uninstall</string>
    <string name="appinfo_menu_display">Display</string>
    <string name="appinfo_menu_sort">Sort</string>
    <string name="appinfo_menu_search">Search</string>
    <string name="appinfo_menu_output">Output</string>
    <string name="appinfo_menu_display_launcher">Launcher</string>
    <string name="appinfo_menu_display_uninstall">Uninstall</string>
    <string name="appinfo_menu_display_preinstall">Preinstall</string>
    <string name="appinfo_menu_display_except_preinstall">Except Preinstall</string>
    <string name="appinfo_menu_display_all">All</string>
    <string name="appinfo_menu_sort_name">Name</string>
    <string name="appinfo_menu_sort_source_size">APK Size</string>
    <string name="appinfo_menu_sort_data_size">Data Size</string>
    <string name="permlab_readAttachment">Your messages</string>
    <string name="permlab_statusBar">disable or modify status bar</string>
    <string name="permdesc_statusBar">Allows application to disable
        the status bar or add and remove system icons.</string>
    <string name="permlab_statusBarService">status bar</string>
    <string name="permdesc_statusBarService">Allows the application to be the status bar.</string>
    <string name="permlab_expandStatusBar">expand/collapse status bar</string>
    <string name="permdesc_expandStatusBar">Allows application to
        expand or collapse the status bar.</string>
    <string name="permlab_processOutgoingCalls">intercept outgoing calls</string>
    <string name="permdesc_processOutgoingCalls">Allows application to
        process outgoing calls and change the number to be dialed.  Malicious
        applications may monitor, redirect, or prevent outgoing calls.</string>
    <string name="permlab_receiveSms">receive SMS</string>
    <string name="permdesc_receiveSms">Allows application to receive
      and process SMS messages. Malicious applications may monitor
      your messages or delete them without showing them to you.</string>
    <string name="permlab_receiveMms">receive MMS</string>
    <string name="permdesc_receiveMms">Allows application to receive
      and process MMS messages. Malicious applications may monitor
      your messages or delete them without showing them to you.</string>
    <string name="permlab_receiveEmergencyBroadcast">receive emergency broadcasts</string>
    <string name="permdesc_receiveEmergencyBroadcast">Allows application to receive
      and process emergency broadcast messages. This permission is only available
      to system applications.</string>
    <string name="permlab_sendSms">send SMS messages</string>
    <string name="permdesc_sendSms">Allows application to send SMS
      messages. Malicious applications may cost you money by sending
      messages without your confirmation.</string>
    <string name="permlab_sendSmsNoConfirmation">send SMS messages with no confirmation</string>
    <string name="permdesc_sendSmsNoConfirmation">Allows application to send SMS
      messages. Malicious applications may cost you money by sending
      messages without your confirmation.</string>
    <string name="permlab_readSms">read SMS or MMS</string>
    <string name="permdesc_readSms" product="default">Allows application to read
      SMS messages stored on your phone or SIM card. Malicious applications
      may read your confidential messages.</string>
    <string name="permlab_writeSms">edit SMS or MMS</string>
    <string name="permdesc_writeSms" product="default">Allows application to write
      to SMS messages stored on your phone or SIM card. Malicious applications
      may delete your messages.</string>
    <string name="permlab_receiveWapPush">receive WAP</string>
    <string name="permdesc_receiveWapPush">Allows application to receive
      and process WAP messages. Malicious applications may monitor
      your messages or delete them without showing them to you.</string>
    <string name="permlab_getTasks">retrieve running applications</string>
    <string name="permdesc_getTasks">Allows application to retrieve
        information about currently and recently running tasks. May allow
        malicious applications to discover private information about other applications.</string>
    <string name="permlab_reorderTasks">reorder running applications</string>
    <string name="permdesc_reorderTasks">Allows an application to move
        tasks to the foreground and background. Malicious applications can force
        themselves to the front without your control.</string>
    <string name="permlab_removeTasks">stop running applications</string>
    <string name="permdesc_removeTasks">Allows an application to remove
        tasks and kill their applications. Malicious applications can disrupt
        the behavior of other applications.</string>
    <string name="permlab_setDebugApp">enable application debugging</string>
    <string name="permdesc_setDebugApp">Allows an application to turn
        on debugging for another application. Malicious applications can use this
        to kill other applications.</string>
    <string name="permlab_changeConfiguration">change your UI settings</string>
    <string name="permdesc_changeConfiguration">Allows an application to
        change the current configuration, such as the locale or overall font
        size.</string>
    <string name="permlab_enableCarMode">enable car mode</string>
    <string name="permdesc_enableCarMode">Allows an application to
        enable the car mode.</string>
    <string name="permlab_killBackgroundProcesses">kill background processes</string>
    <string name="permdesc_killBackgroundProcesses">Allows an application to
        kill background processes of other applications, even if memory
        isn\'t low.</string>
    <string name="permlab_forceStopPackages">force stop other applications</string>
    <string name="permdesc_forceStopPackages">Allows an application to
        forcibly stop other applications.</string>
    <string name="permlab_forceBack">force application to close</string>
    <string name="permdesc_forceBack">Allows an application to force any
        activity that is in the foreground to close and go back.
        Should never be needed for normal applications.</string>
    <string name="permlab_dump">retrieve system internal state</string>
    <string name="permdesc_dump">Allows application to retrieve
        internal state of the system. Malicious applications may retrieve
        a wide variety of private and secure information that they should
        never normally need.</string>
    <string name="permlab_retrieve_window_content">retrieve screen content</string>
    <string name="permdesc_retrieve_window_content">Allows application to retrieve
        the content of the active window. Malicious applications may retrieve
        the entire window content and examine all its text except passwords.</string>
    <string name="permlab_shutdown">partial shutdown</string>
    <string name="permdesc_shutdown">Puts the activity manager into a shutdown
        state.  Does not perform a complete shutdown.</string>
    <string name="permlab_stopAppSwitches">prevent app switches</string>
    <string name="permdesc_stopAppSwitches">Prevents the user from switching to
        another application.</string>
    <string name="permlab_runSetActivityWatcher">monitor and control all application launching</string>
    <string name="permdesc_runSetActivityWatcher">Allows an application to
        monitor and control how the system launches activities.
        Malicious applications may completely compromise the system. This
        permission is only needed for development, never for normal
        use.</string>
    <string name="permlab_broadcastPackageRemoved">send package removed broadcast</string>
    <string name="permdesc_broadcastPackageRemoved">Allows an application to
        broadcast a notification that an application package has been removed.
        Malicious applications may use this to kill any other running
        application.</string>
    <string name="permlab_broadcastSmsReceived">send SMS-received broadcast</string>
    <string name="permdesc_broadcastSmsReceived">Allows an application to
        broadcast a notification that an SMS message has been received.
        Malicious applications may use this to forge incoming SMS messages.</string>
</resources>